--- a/argocd-helm-charts/sonarqube/Chart.yaml
+++ b/argocd-helm-charts/sonarqube/Chart.yaml
@@ -9,5 +9,5 @@ name: sonarqube
 version: 4.0.2+325
 dependencies:
   - name: sonarqube
-    version: 10.7.0+3598
+    version: 10.8.0
     repository: https://SonarSource.github.io/helm-chart-sonarqube
