--- a/argocd-helm-charts/capi-cluster/charts/hetzner/values.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/values.yaml
@@ -1,4 +1,8 @@
 controlPlaneLoadBalancer:
   enabled: true
+
 robot:
   floating: false
+
+robotSSHKeysSecretName: hetzner-robot-ssh-keys
+cloudCredentialsSecretName: cloud-credentials
