--- a/argocd-helm-charts/capi-cluster/templates/provider-hetzner.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-hetzner.yaml
@@ -1,17 +1,28 @@
 {{- if (.Values.provider).hetzner }}
+
+{{- /* For non Obmondo users, no customerid is needed. */ -}}
+{{- $name := "hetzner" }}
+{{- $namespace := "capi-cluster" }}
+
+{{- /* For obmondo customers. */ -}}
+{{- if .Values.global.customerid }}
+{{- $name = printf "%s-%s" $name .Values.global.customerid }}
+{{- $namespace = printf "%s-%s" $namespace .Values.global.customerid }}
+{{- end }}
+
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
-  name: hetzner-{{ .Values.global.customerid }}
-  namespace: capi-cluster-{{ .Values.global.customerid }}
+  name: {{ $name }}
+  namespace: {{ $namespace }}
 spec:
   configSecret:
-    name: capi-cluster-hetzner
-    namespace: capi-cluster-{{ .Values.global.customerid }}
+    name: {{ .Values.hetzner.cloudCredentialsSecretName }}
+    namespace: {{ $namespace }}
   version: {{ .Values.global.caph.version }}
   fetchConfig:
     url: https://github.com/syself/cluster-api-provider-hetzner/releases/download/{{ .Values.global.caph.version }}/infrastructure-components.yaml
-  manager:
+  manager: {}
     # bug: cluster-api renders it as
     # --metrics-bind-addr and CAPH wants --metrics-bind-address
     # metrics:
