--- a/argocd-helm-charts/openobserve/Chart.yaml
+++ b/argocd-helm-charts/openobserve/Chart.yaml
@@ -3,11 +3,11 @@ name: openobserve
 version: 0.13.4
 dependencies:
   - name: openobserve
-    version: 0.13.8
-    repository: https://charts.openobserve.ai/
-  - name: openobserve-standalone
-    version: 0.13.6
+    version: 0.14.1
     repository: https://charts.openobserve.ai/
   - name: openobserve-collector
     version: 0.3.15
     repository: https://charts.openobserve.ai/
+  - name: opentelemetry-operator
+    version: 0.75.1
+    repository: https://open-telemetry.github.io/opentelemetry-helm-charts
