--- a/argocd-helm-charts/keycloakx/values.yaml
+++ b/argocd-helm-charts/keycloakx/values.yaml
@@ -10,6 +10,8 @@ keycloakx:
     - "--hostname-strict=false"
     - "--spi-events-listener-jboss-logging-success-level=info"
     - "--spi-events-listener-jboss-logging-error-level=warn"
+  proxy:
+    mode: xforwarded
   database:
     vendor: postgres
     hostname: keycloak-pgsql-rw
