--- a/argocd-helm-charts/strimzi-kafka-operator/charts/strimzi-kafka-operator/crds/049-Crd-kafkarebalance.yaml
+++ b/argocd-helm-charts/strimzi-kafka-operator/charts/strimzi-kafka-operator/crds/049-Crd-kafkarebalance.yaml
@@ -31,30 +31,26 @@ spec:
           description: The name of the Kafka cluster this resource rebalances
           jsonPath: .metadata.labels.strimzi\.io/cluster
           type: string
-        - name: PendingProposal
-          description: A proposal has been requested from Cruise Control
-          jsonPath: ".status.conditions[?(@.type==\"PendingProposal\")].status"
+        - name: Template
+          description: If this rebalance resource is a template
+          jsonPath: .metadata.annotations.strimzi\.io/rebalance-template
           type: string
-        - name: ProposalReady
-          description: A proposal is ready and waiting for approval
-          jsonPath: ".status.conditions[?(@.type==\"ProposalReady\")].status"
-          type: string
-        - name: Rebalancing
-          description: Cruise Control is doing the rebalance
-          jsonPath: ".status.conditions[?(@.type==\"Rebalancing\")].status"
-          type: string
-        - name: Ready
-          description: The rebalance is complete
-          jsonPath: ".status.conditions[?(@.type==\"Ready\")].status"
-          type: string
-        - name: NotReady
-          description: There is an error on the custom resource
-          jsonPath: ".status.conditions[?(@.type==\"NotReady\")].status"
+        - name: Status
+          description: Status of the current rebalancing operation
+          jsonPath: ".status.conditions[*].type"
           type: string
       schema:
         openAPIV3Schema:
           type: object
           properties:
+            apiVersion:
+              type: string
+              description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources"
+            kind:
+              type: string
+              description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"
+            metadata:
+              type: object
             spec:
               type: object
               properties:
