--- a/argocd-helm-charts/argocd-image-updater/charts/argocd-image-updater/Chart.yaml
+++ b/argocd-helm-charts/argocd-image-updater/charts/argocd-image-updater/Chart.yaml
@@ -1,7 +1,7 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: Bump argocd-image-updater to v0.15.1
+      description: Update permissions for namespaced Role
   artifacthub.io/signKey: |
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
@@ -20,4 +20,4 @@ maintainers:
   url: https://argoproj.github.io/
 name: argocd-image-updater
 type: application
-version: 0.11.2
+version: 0.11.3
