--- a/argocd-helm-charts/argocd-image-updater/charts/argocd-image-updater/templates/rbac.yaml
+++ b/argocd-helm-charts/argocd-image-updater/charts/argocd-image-updater/templates/rbac.yaml
@@ -24,6 +24,15 @@ rules:
       - events
     verbs:
       - create
+  - apiGroups:
+      - argoproj.io
+    resources:
+      - applications
+    verbs:
+      - get
+      - list
+      - update
+      - patch
   {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
