[CI] Helm Chart Update aws-ebs-csi-driver

--- a/argocd-helm-charts/aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/metrics.yaml
+++ b/argocd-helm-charts/aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/metrics.yaml
@@ -41,7 +41,7 @@ spec:
 {{- end }}
 {{- end }}
 ---
-{{- if .Values.node.enableMetrics -}}
+{{- if .Values.node.enableMetrics }}
 apiVersion: v1
 kind: Service
 metadata:
