--- a/argocd-helm-charts/gatekeeper/charts/gatekeeper/templates/gatekeeper-manager-role-clusterrole.yaml
+++ b/argocd-helm-charts/gatekeeper/charts/gatekeeper/templates/gatekeeper-manager-role-clusterrole.yaml
@@ -66,6 +66,18 @@ rules:
 - apiGroups:
   - config.gatekeeper.sh
   resources:
+  - '*'
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - config.gatekeeper.sh
+  resources:
   - configs
   verbs:
   - create
