--- a/argocd-helm-charts/snapshot-controller/charts/snapshot-controller/Chart.yaml
+++ b/argocd-helm-charts/snapshot-controller/charts/snapshot-controller/Chart.yaml
@@ -1,10 +1,8 @@
 apiVersion: v2
-appVersion: v8.1.0
+appVersion: v8.2.0
 description: 'Deploys a Snapshot Controller in a cluster. Snapshot Controllers are
   often bundled with the Kubernetes distribution, this chart is meant for cases where
-  it is not. Also deploys the Snapshot Validation Webhook and configures your cluster
-  to validate every `VolumeSnapshot` and `VolumeSnapshotContent` resource by sending
-  it to the webhook. '
+  it is not. '
 home: https://github.com/piraeusdatastore/helm-charts
 icon: https://raw.githubusercontent.com/piraeusdatastore/piraeus/master/artwork/sandbox-artwork/icon/color.svg
 keywords:
@@ -19,4 +17,4 @@ name: snapshot-controller
 sources:
 - https://github.com/kubernetes-csi/external-snapshotter/
 type: application
-version: 3.0.6
+version: 4.0.0
