--- a/argocd-helm-charts/teleport-cluster/charts/teleport-cluster/charts/teleport-operator/values.yaml
+++ b/argocd-helm-charts/teleport-cluster/charts/teleport-cluster/charts/teleport-operator/values.yaml
@@ -28,8 +28,8 @@ installCRDs: "dynamic"
 teleportAddress: ""
 
 # caPins(list[string]) -- is a list of Teleport CA fingerprints that is used by the operator to
-# validate the identity of the Teleport Auth server. This is only used when joining
-# an Auth server directly (on port `3025`) and is ignored when joining through a Proxy
+# validate the identity of the Teleport Auth Service. This is only used when joining
+# an Auth Service directly (on port `3025`) and is ignored when joining through a Proxy
 # (port `443` or `3080`).
 caPins: []
 
