--- a/argocd-helm-charts/relate/charts/relate/templates/deployment.yaml
+++ b/argocd-helm-charts/relate/charts/relate/templates/deployment.yaml
@@ -49,10 +49,10 @@ spec:
               httpHeaders:
                 - name: Host
                   value: relate
-            initialDelaySeconds: 500        
-            periodSeconds: 100             
+            initialDelaySeconds: 10        
+            periodSeconds: 60             
             timeoutSeconds: 300             
-            failureThreshold: 3           
+            failureThreshold: 30           
             successThreshold: 1
           readinessProbe:
             httpGet:
@@ -61,10 +61,10 @@ spec:
               httpHeaders:
                 - name: Host
                   value: relate
-            initialDelaySeconds: 500
-            periodSeconds: 100
+            initialDelaySeconds: 10
+            periodSeconds: 160
             timeoutSeconds: 300
-            failureThreshold: 3
+            failureThreshold: 30
             successThreshold: 1
           {{- if .Values.resources }}
           resources: {{- toYaml .Values.resources | nindent 12 }}
@@ -77,6 +77,9 @@ spec:
           volumeMounts:
             - mountPath: /var/www/relate/git-roots
               name: data
+            - name: shared-static-data
+              mountPath:  /var/www/relate/static
+
       volumes:
         - name: data
           {{- if .Values.persistence.enabled }}
@@ -85,3 +88,41 @@ spec:
           {{- else }}
           emptyDir: {{- toYaml .Values.emptyDir | nindent 10 }}
           {{- end  }}
+        - name: shared-static-data
+          persistentVolumeClaim:
+            claimName: {{ .Release.Name }}-staticdata
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ .Release.Name }}-nginx-deployment
+spec:
+  replicas: {{ default 1 .Values.nginx.replicas }}  # Default to 1 replica if not provided
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: {{  .Values.nginx.image | default "nginx:latest" }}
+          imagePullPolicy: {{  .Values.nginx.pullPolicy | default "IfNotPresent"}}  # Default pull policy if not provided
+          volumeMounts:
+            - name: nginx-config-volume
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
+            - name: shared-static-data
+              mountPath: /var/www/relate/static
+          ports:
+            - containerPort: 80
+
+      volumes:
+        - name: nginx-config-volume
+          configMap:
+            name: {{ .Release.Name }}-nginx-config
+        - name: shared-static-data
+          persistentVolumeClaim:
+            claimName: {{ .Release.Name }}-staticdata  # Default PVC name if not provided
