--- a/argocd-helm-charts/relate/charts/relate/templates/postgres.yaml
+++ b/argocd-helm-charts/relate/charts/relate/templates/postgres.yaml
@@ -12,7 +12,10 @@ spec:
   instances: {{ ((.Values.cnpg).instance) | default 1 }}
   {{ if (.Values.cnpg).recover }}
   bootstrap:
-    recovery: relate-pgsql
+    recovery: 
+      source: relate-pgsql
+      database: relate
+      owner: relate
   {{ else }}
   bootstrap:
     initdb:
@@ -32,33 +35,33 @@ spec:
     {{- end }}
   {{- if (.Values.cnpg).recover }}
   externalClusters:
-    name: relate-pgsql
-    barmanObjectStore:
-      destinationPath: {{ ((.Values.cnpg).backup).destinationPath }}
-      endpointURL: {{ ((.Values.cnpg).backup).endpointURL }}
-      {{- if eq ((.Values.cnpg).backup).cloud "aws" }}
-      s3Credentials:
-        accessKeyId:
-          name: relate-pgsql-backup-creds
-          key: ACCESS_KEY_ID
-        secretAccessKey:
-          name: relate-pgsql-backup-creds
-          key: ACCESS_SECRET_KEY
-      {{- end }}
+    - name: relate-pgsql
+      barmanObjectStore:
+        destinationPath: {{ ((.Values.cnpg).backup).destinationPath }}
+        endpointURL: {{ ((.Values.cnpg).backup).endpointURL }}
+        {{- if eq ((.Values.cnpg).backup).cloud "aws" }}
+        s3Credentials:
+          accessKeyId:
+            name: relate-secret
+            key: ACCESS_KEY_ID
+          secretAccessKey:
+            name: relate-secret
+            key: ACCESS_SECRET_KEY
+        {{- end }}
       {{- if eq ((.Values.cnpg).backup).cloud "azure" }}
-      azureCredentials:
-        connectionString:
-          name: relate-pgsql-backup-creds
-          key: AZURE_CONNECTION_STRING
-        storageAccount:
-          name: relate-pgsql-backup-creds
-          key: AZURE_STORAGE_ACCOUNT
-        storageKey:
-          name: relate-pgsql-backup-creds
-          key: AZURE_STORAGE_KEY
-        storageSasToken:
-          name: relate-pgsql-backup-creds
-          key: AZURE_STORAGE_SAS_TOKEN
+        azureCredentials:
+          connectionString:
+            name: relate-pgsql-backup-creds
+            key: AZURE_CONNECTION_STRING
+          storageAccount:
+            name: relate-pgsql-backup-creds
+            key: AZURE_STORAGE_ACCOUNT
+          storageKey:
+            name: relate-pgsql-backup-creds
+            key: AZURE_STORAGE_KEY
+          storageSasToken:
+            name: relate-pgsql-backup-creds
+            key: AZURE_STORAGE_SAS_TOKEN
       {{- end }}
         wal:
           maxParallel: 8
@@ -71,10 +74,10 @@ spec:
       {{- if eq ((.Values.cnpg).backup).cloud "aws" }}
       s3Credentials:
         accessKeyId:
-          name: relate-pgsql-backup-creds
+          name: relate-secret
           key: ACCESS_KEY_ID
         secretAccessKey:
-          name: relate-pgsql-backup-creds
+          name: relate-secret
           key: ACCESS_SECRET_KEY
       {{- end }}
       {{- if eq ((.Values.cnpg).backup).cloud "azure" }}
@@ -93,8 +96,9 @@ spec:
           key: AZURE_STORAGE_SAS_TOKEN
       {{- end }}
       wal:
-        compression: gzip
-        encryption: AES256
+        encryption: ""
+      data:
+        encryption: ""
     retentionPolicy: "30d"
   {{ end  }}
 {{ end }}
