--- a/argocd-helm-charts/relate/charts/relate/templates/service.yaml
+++ b/argocd-helm-charts/relate/charts/relate/templates/service.yaml
@@ -19,3 +19,17 @@ spec:
       nodePort: null
       {{- end }}
   selector: {{- include "relate.matchLabels" . | nindent 4 }}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app: nginx
+  ports:
+    - port: 80
+      targetPort: 80
+  type: ClusterIP 
+
