--- a/argocd-helm-charts/ccm-hetzner/charts/ccm-hetzner/Chart.yaml
+++ b/argocd-helm-charts/ccm-hetzner/charts/ccm-hetzner/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v1.18.0-0.0.8
+appVersion: v2.0.1
 description: Helm Chart for Hcloud Cloud Controller Manager
 home: https://github.com/syself/charts/tree/main/charts/ccm-hetzner
 maintainers:
@@ -8,4 +8,4 @@ maintainers:
   url: https://github.com/syself
 name: ccm-hetzner
 type: application
-version: 1.1.15
+version: 2.0.1
