[CI] Helm Chart Update gitlab-runner

--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/service-session-server.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/service-session-server.yaml
@@ -30,6 +30,12 @@ spec:
   {{- if eq (include "gitlab-runner.server-session-service-type" .) "Headless" }}
   clusterIP: None
   {{- end }}
+  {{- if .Values.sessionServer.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.sessionServer.externalTrafficPolicy }}
+  {{- end }}
+  {{- if .Values.sessionServer.internalTrafficPolicy }}
+  internalTrafficPolicy: {{ .Values.sessionServer.internalTrafficPolicy }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ include "gitlab-runner.server-session-external-port" . }}
