--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
@@ -174,6 +174,18 @@ sessionServer:
   #Valid values: ClusterIP, Headless, NodePort, LoadBalancer
   serviceType: LoadBalancer
 
+  ## Specify the services external traffic policy
+  ##
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#traffic-policies
+  ##
+  # externalTrafficPolicy:
+
+  ## Specify the services internal traffic policy
+  ##
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#traffic-policies
+  ##
+  # internalTrafficPolicy:
+
   # if enabled, sessionServer.publicIP variable should be set to the host e.g. runner1.example.com
   ingress:
     enabled: false
@@ -403,6 +415,18 @@ service:
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
   ##
   # additionalPorts: []
+
+  ## Specify the services external traffic policy
+  ##
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#traffic-policies
+  ##
+  # externalTrafficPolicy:
+
+  ## Specify the services internal traffic policy
+  ##
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#traffic-policies
+  ##
+  # internalTrafficPolicy:
 
 ## Configuration for the Pods that the runner launches for each new job
 ##
